manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: kneipolympics-deployment
  name: kneipolympics-deployment
  namespace: kneipolympics
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kneipolympics-deployment
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: kneipolympics-deployment
    spec:
      containers:
        - image: ghcr.io/h1ghbre4k3r/kneipolympics:c5d8b01a2e85bde3cab372d8d3d57e7f4b4b6ea1
          imagePullPolicy: Always
          name: kneipolympics-deployment
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
